Fixed the letter antialiasing by adding a letter spacing

--- a/styles/camera_roll.sass
+++ b/styles/camera_roll.sass
@@ -2,7 +2,11 @@
     .main
         .photos, .videos
             &:has(div:nth-child(5))
-                column-count: 3
+                column-count: 1
+                @media screen and ( min-width: 550px )
+                    column-count: 2
+                @media screen and ( min-width: 768px )
+                    column-count: 3
                 column-gap: 1rem
                 & > div
                     width: 100%
@@ -16,11 +20,15 @@
                 gap: 1rem
                 & > div
                     width: 35%
-            div
-                img, video
-                    width: 100%
+            & > div
+                min-width: 190px
                 p
                     margin: 0.5rem 0
+        .videos .window
+            flex: 1 1 auto
+        & > h1, & > .window
+            max-width: 1200px
+            margin: 0 auto
         p, h2
             text-align: center
         .window
@@ -41,6 +49,7 @@
         margin-bottom: 1rem
         max-height: 40% !important
     img
+        width: auto
         max-height: 80%
         max-width: 90%
     p
