--- a/styles/main.sass
+++ b/styles/main.sass
@@ -19,7 +19,7 @@ $window_titlebar_height : 40px
     --color-title-lowop: rgba(234, 187, 185, 0.7)
     --img-bg: url("#{$assets_path}/background-tile.gif")
     --img-header-bg: url("#{$assets_path}/banner.jpg")
-    //letter-spacing: -0.5px
+    letter-spacing: -0.5px
 
 @font-face
     font-family: "uni 05_53"
